Start state for graphiti integration

--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -71,7 +71,7 @@
         </td>
 
         <td>
-          <%= photo.image %>
+          <img src="<%= photo.image %>" class="img-fluid" alt="<%= photo.caption %>">
         </td>
 
         <td>
